project/test/semantics/unit/good/input/Good19_shouldEvaluateWhile.ty
mutable class Counter {
    
    variables: {
        count: Int = 0;
    }
}

singleton class WhileTest {
    
    actions: {
        main: () -> Void = {
            val counter: Counter = Counter;
            while (counter.count < 10) {
                counter#count(counter.count + 1)
            }
            
            System#assertEquals(10, counter.count)
        }
    }
}
